--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,11 @@
 [Settings]
 cli = True
-gamefile = emulation/red.gb
+gamefile = emulation/red_patched.gb
 capture_time = 5
-game_speed = 0
-mock_service = True
+game_speed = 1
+mock_service = False
 ; 0 = normal, 1 = 1x, 2 = 2x, 3 = 3x et c
+
+
+[Agent]
+pre_prompt = preprompt.txt
