moved more parameters to config

--- a/config.ini
+++ b/config.ini
@@ -9,3 +9,7 @@ mock_service = False
 
 [Agent]
 pre_prompt = preprompt.txt
+context_size = 8192
+; Should be a power of two
+model_name = gemma3
+model_size = 4b
