Added the option to run text-only LLMs with an image-to-text helping them. Added deepseek

--- a/config.ini
+++ b/config.ini
@@ -11,5 +11,5 @@ mock_service = True
 pre_prompt = preprompt.txt
 context_size = 8192
 ; Should be a power of two for best performance
-model_name = gemma3
-model_size = 4b
+model = deepseek-r1:7b
+image_model = moondream
